UI updates to improve accessibility

--- a/Doctor_App/app/src/main/res/layout/dashboard_list_item.xml
+++ b/Doctor_App/app/src/main/res/layout/dashboard_list_item.xml
@@ -12,6 +12,7 @@
         android:padding="@dimen/activity_horizontal_margin"
         android:text="Demo"
         android:textColor="#000"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -53,9 +54,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginBottom="16dp"
         android:text="@string/phone_number"
+        android:textColor="@color/darkest_gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
