--- a/Doctor_App/app/src/main/res/values/colors.xml
+++ b/Doctor_App/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="white">#FFFFFF</color>
     <color name="dark_gray">#A3BAC3</color>
     <color name="pattern_lock">#0083CC</color>
-    <color name="darkest_gray">#626262</color>
+    <color name="darkest_gray">#2E3032</color>
 </resources>
