--- a/DiabetesApp/app/src/main/res/layout/activity_input_sugar.xml
+++ b/DiabetesApp/app/src/main/res/layout/activity_input_sugar.xml
@@ -125,4 +125,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <ImageButton
+        android:id="@+id/help"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:background="@drawable/button_background_48dp"
+        android:padding="10dp"
+        android:src="@drawable/ic_help_black_48dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
