Added feature to add reminder to contact patient again, within comment section in Doctor's app

--- a/backend/src/views/updatePatient.handlebars
+++ b/backend/src/views/updatePatient.handlebars
@@ -7,25 +7,25 @@
   <input type="number" name="patientID" required><br>
 
   <label for="firstName">First Name:</label>
-  <input type="text" name="firstName" required><br>
+  <input type="text" name="firstName"><br>
 
   <label for="lastName">Last Name:</label>
-  <input type="text" name="lastName" required><br>
+  <input type="text" name="lastName"><br>
 
   <label for="height">Height:</label>
-  <input type="number" name="height" required><br>
+  <input type="number" name="height"><br>
 
   <label for="pregnant">Is the patient pregnant?</label>
-  <input type="number" name="pregnant" required><br>
+  <input type="number" name="pregnant"><br>
 
   <label for="mobileNumber">Mobile Number:</label>
-  <input type="number" name="mobileNumber" required><br>
+  <input type="number" name="mobileNumber"><br>
 
   <label for="userName">Username:</label>
-  <input type="text" name="userName" required><br>
+  <input type="text" name="userName"><br>
 
   <label for="password">Password:</label>
-  <input type="password" name="password" required>
+  <input type="password" name="password">
 
   <input type="submit" class="action-submit" name="submit">
 </form>
