Added getting list of patients that are scheduled to be seen again but not seen yet

--- a/backend/src/views/dashboard.handlebars
+++ b/backend/src/views/dashboard.handlebars
@@ -26,3 +26,9 @@
     </li>
   </ul>
 </p>
+
+<form action="/api/getPatientsToSee" method="POST">
+  <input type="hidden" name="doctorID" id="doctor-id" required>
+
+  <input type="submit" class="action-submit" name="submit" value="Get Patients Scheduled To Call">
+</form>
