--- a/backend/src/views/editProfile.handlebars
+++ b/backend/src/views/editProfile.handlebars
@@ -18,11 +18,11 @@
   <label for="username">Username:</label>
   <input type="text" id="username" name="username"><br>
 
-  <label for="password">Password:</label>
+  <label for="password">New Password:</label>
   <input type="password" id="password" name="password" pattern=".{6,}" title="Six or more characters is required."
     onkeyup="validatePassword()" /><br />
 
-  <label for="confirmPassword">Confirm Password:</label>
+  <label for="confirmPassword">Confirm New Password:</label>
   <input type="password" id="confirmPassword" name="confirmPassword" pattern=".{6,}"
     title="Six or more characters is required." onkeyup="validatePassword()" />
 
