Patients that need to be seen will get a phone icon next to it

--- a/Doctor_App/app/src/main/res/layout/activity_dashboard.xml
+++ b/Doctor_App/app/src/main/res/layout/activity_dashboard.xml
@@ -17,9 +17,10 @@
         android:theme="?attr/actionBarTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.00"
+        app:layout_constraintVertical_bias="0.0"
         app:titleTextColor="@color/white" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
@@ -48,16 +49,16 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:divider="@null"
         android:footerDividersEnabled="false"
         android:headerDividersEnabled="false"
         android:padding="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar">
-    </ListView>
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintVertical_bias="0.0"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
