--- a/backend/src/views/layouts/main.handlebars
+++ b/backend/src/views/layouts/main.handlebars
@@ -13,38 +13,50 @@
 </head>
 
 <body>
-  <a href="/">
-    <div id="left-nav">
-      <div id="menu-title">
-        <img src="/images/white-logo.png" height="18px" width="auto">
+
+  <div id="left-nav">
+    <div id="menu-title">
+      <img src="/images/white-logo.png" height="18px" width="auto">
+    </div>
+
+
+    <a id="get-dashboard">
+      <div class="action-link">
+        Dashboard
       </div>
-  </a>
+    </a>
 
-  <a href="/inviteDoctor">
-    <div class="action-link">
-      Invite a Doctor
-    </div>
-  </a>
+    <a href="/inviteDoctor">
+      <div class="action-link">
+        Invite a Doctor
+      </div>
+    </a>
 
-  <a href="/clinicSignup">
-    <div class="action-link">
-      Register a Clinic
-    </div>
-  </a>
+    <a href="/clinicSignup">
+      <div class="action-link">
+        Register a Clinic
+      </div>
+    </a>
 
-  <a href="/addDoctorToClinics">
-    <div class="action-link">
-      Join a Clinic
-    </div>
-  </a>
+    <a href="/addDoctorToClinics">
+      <div class="action-link">
+        Join a Clinic
+      </div>
+    </a>
 
-  <a href="/editProfile">
-    <div class="action-link">
-      Edit Profile
-    </div>
-  </a>
+    <a href="/editProfile">
+      <div class="action-link">
+        Edit Profile
+      </div>
+    </a>
 
-  <div id="sign-out" name="signout">Sign Out</div>
+    <a href="/help">
+      <div class="action-link">
+        Help
+      </div>
+    </a>
+
+    <div id="sign-out" name="signout">Sign Out</div>
   </div>
 
   <div id="right-data">
