--- a/backend/src/public/style.css
+++ b/backend/src/public/style.css
@@ -5,7 +5,7 @@ html {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 1em;
+  font-size: 14px;
 }
 
 #body-wrap {
